tests/NormalTests/paczka1/fuzzy1/30369383.err
Error in line 15: 0NUj43te50 A950 58,6
Error in line 23: VmK A950 13,66
Error in line 29: E8mwUB S233 90,1
Error in line 28: VmK A950 18,9
